# Program-Analysis-Homework

./: README.md
Homework-1/pa_template/: build.sh  callgraph.dot  mygraph.dot.backup
Homework-1/pa_template/benchmark/: build.sh
Homework-1/pa_template/myAnalysis/: CMakeLists.txt
Homework-1/pa_template/myAnalysis/include/: analysis.h  cmd_parser.h  generic_graph.h  graph_generator.h  graph_test.h  graph_visual.h  mygraph.h
Homework-1/pa_template/myAnalysis/src/: analysis.cpp  main.cpp  test.cpp
Homework-2/pa_template/: build.sh  runTest.sh
pa_template/: dot2png.sh  runTest.sh
pa_template/benchmark/bench1/: FuncA_cfg.dot  FuncB_cfg.dot  Getpasswd_cfg.dot  cg.dot  demo  demo.bc  demo.ll  dfg.dot  icfg.dot  main_cfg.dot  w-cg.dot  w-icfg.dot  w-pag.dot
pa_template/benchmark/bench10/: demo  demo.bc  demo.ll  dfg.dot  icfg.dot  main_cfg.dot  w-icfg.dot  w-pag.dot
pa_template/benchmark/bench11/: cg.dot  demo  demo.bc  demo.ll  dfg.dot  icfg.dot  main_cfg.dot  w-cg.dot  w-icfg.dot  w-pag.dot
pa_template/benchmark/bench12/: add_cfg.dot  cg.dot  demo  demo.bc  demo.ll  dfg.dot  foo_cfg.dot  icfg.dot  main_cfg.dot  run_cfg.dot  w-cg.dot  w-icfg.dot  w-pag.dot
pa_template/benchmark/bench2/: cg.dot  demo  demo.bc  demo.ll  dfg.dot  icfg.dot  main_cfg.dot  w-icfg.dot  w-pag.dot
pa_template/benchmark/bench3/: cg.dot  demo  demo.bc  demo.ll  dfg.dot  icfg.dot  main_cfg.dot  sum_cfg.dot  w-cg.dot  w-icfg.dot  (+1 more)
pa_template/myAnalysis/: CMakeLists.txt
project5/: CMakeLists.txt  DeadCodeDetector.cpp  README.md
project5/testcases/: 1.bc  1.c  2.bc  2.c  3.bc  3.c
(+168 files in other folders)
